<resources>
    <string name="app_name">FilMax</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="nama">Name</string>
    <string name="konfirmasi_password">Confirm Password</string>
</resources>